# personal-website

./: .env.example  .gitignore  README.md  pyproject.toml
app/: emailer.py  leads_db.py  main.py  main_backup.py  schemas.py  settings.py
app/static/: draft-availability-9f3k2.html  high-school-math-tutor-victoria.html  index.html  index_backup.html  index_current.html  index_new.html  index_simple_v2.html  math-151-tutor-uvic.html  psych-300-statistics-tutor-uvic.html  stat-252-tutor-uvic.html  stat-252.html
app/static/draft-availability-9f3k2/: index.html
app/templates/: base.html  index.html
app/templates/components/: flash.html  footer.html  navbar.html
app/templates/partials/: contact_success.html
